    somewhat counter to the intent of the protocol, I (CSR) think, and
    additionally it just doesn't work in SBCL as currently
    implemented, thanks to optimizations (that are always valid for
    the other three SLOT-VALUEish functions, but not for the setter).
  * bug fix: unparsing logical pathnames with :NAME :WILD :TYPE NIL
    failed with a type error.  (reported by Pascal Bourguignon)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.641: LET-conversion were not supposed to work in late
       compilation stages.

changes in sbcl-0.9.13 relative to sbcl-0.9.12:
  * new feature: source path information is generated for macro-expansion
    errors for use in IDE's like Slime (thanks to Helmut Eller)
  * bug fix: calls to the compiler no longer modify *RANDOM-STATE*
  * bug fix: compiler does not loop forever on an invalid type in
    TYPEP.
  * improvement: compilation of most CLOS applications is significantly
    faster
  * optimization: added a limited bytecode compiler for simple toplevel
    forms, speeding up compilation and FASL loading

changes in sbcl-0.9.12 relative to sbcl-0.9.11:
  * minor incompatible change: in sbcl-0.9.11 (but not earlier
    versions) SB-MOP:FINALIZE-INHERITANCE would recursively descend
    into subclasses of the finalized class.  Now user calls to
    FINALIZE-INHERITANCE finalize just the one class, and calls by the
    system return before any subclasses are finalized.
  * minor incompatible change: The reader no longer ignores errors
    regarding non-existent packages in #+ and #- feature tests.
  * new feature: command line options --no-sysinit, --no-userinit to
    inhibit loading the corresponding init files
  * new feature: add a generic function SOCKET-SEND to SB-BSD-SOCKETS, 
    for sending data through UDP sockets (thanks to François-René Rideau)
  * minor incompatible change: SIGPIPE is ignored and "Broken pipe"
    error is signalled instead (thanks to François-René Rideau)